<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hk.ust.stop.activity.AddGoodsActivity" >

    <ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	    android:scrollbars="none">
    
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

	<ImageView 
	    android:id="@+id/imageView"
	    android:layout_width="200sp"
	    android:layout_height="200sp"
	    android:src="@drawable/ic_launcher"/>
	
	<!-- Capture picture button -->
	<Button 
        android:id="@+id/captureButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture" />
	
	<!-- Delete picture button -->
	<Button 
        android:id="@+id/deleteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
	
	<EditText
	    android:id="@+id/productName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/string_hint_productName"/>
	
	<EditText
	    android:id="@+id/productDescription"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/string_hint_productDescription"/>
	
	<EditText
	    android:id="@+id/productPrice"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/string_hint_productPrice"
	    android:inputType="numberDecimal"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	    <!-- Reset Button -->
	    <Button 
	        android:id="@+id/resetButton"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/string_reset" />
	    
	    <Button
	        android:id="@+id/saveButton"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/string_save" />
	    
	</LinearLayout>
	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
</LinearLayout>
</ScrollView>

</RelativeLayout>
