<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical">
    
    <!-- Input username -->
    <LinearLayout
        android:id="@+id/username_linearlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_user_name"/>
        
        <EditText 
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/string_hint_username"/>
    </LinearLayout>
    
    <!-- Input password -->
    <LinearLayout 
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_user_password"/>
        
        <EditText 
            android:id="@+id/password_edittext"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/string_hint_password"/>
    </LinearLayout>
    
    <!-- Repeat password -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/string_repeat_pwd"/>
        
        <EditText 
            android:id="@+id/password_repeat"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:maxLength="15"
            android:singleLine="true"
            android:inputType="textPassword"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_user_email"/>
        
        <EditText 
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:singleLine="true"
            android:inputType="text"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/string_user_phone"/>
        
        <EditText 
            android:id="@+id/user_phone"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:singleLine="true"
            android:inputType="phone"
            android:hint="@string/string_hint_username"/>
    </LinearLayout>
</LinearLayout>